--- a/css/about.scss
+++ b/css/about.scss
@@ -609,17 +609,17 @@ body {
                 background: url(../img/main/ico_down_gray.svg) no-repeat right 12px top 50% / 24px;
             }
             .btn-sub {
-                width: 100px;
-                height: 50px;
-                background: #FEE5EB;
-                color: #F60035;
-                text-align: center;
-                font-size: 17px;
-                font-weight: 700;
-                border: 0;
-                margin-left: 10px;
-                white-space: nowrap;
-                border-radius: 4px;
+                // width: 100px;
+                // height: 50px;
+                // background: #FEE5EB;
+                // color: #F60035;
+                // text-align: center;
+                // font-size: 17px;
+                // font-weight: 700;
+                // border: 0;
+                // margin-left: 10px;
+                // white-space: nowrap;
+                // border-radius: 4px;
             }
 
             &.border-bottom {
@@ -1444,9 +1444,9 @@ body {
     }
 }
 .banner03 {
-    margin-bottom: 90px;
+    margin-bottom: 200px;
     width: 100%;
-    margin-top: 216px;
+    margin-top: 90px;
 }
 .list-info {
     li {
