--- a/css/m_about.css
+++ b/css/m_about.css
@@ -1,1 +1,1 @@
-@media screen and (max-width: 720px){.barve img{width:100px !important}}/*# sourceMappingURL=m_about.css.map */
+@media screen and (max-width: 720px){.barve img{width:100px !important}.nav-b>div{display:none}}/*# sourceMappingURL=m_about.css.map */
