--- a/css/reset.scss
+++ b/css/reset.scss
@@ -77,16 +77,17 @@ header {
     height: 100px;
 
     .nav-b {
-        width: 100%;
-        @include flex(flex-start, flex-start) {}
+        display: grid;
+        grid-template-columns: 70px 1fr 70px;
         align-items: center;
-        margin: 0 auto;
+        width: 100%;
         padding: 12px 16px;
         z-index: 999;
         position: relative;
         height: 100px;
 
         >a {
+            width: 70px;
             @include font(600, 25px);
             color: white;
             &.logo {
@@ -97,14 +98,15 @@ header {
         }
 
         >div {
+            width: 70px;
             color: white;
             @include font(900, 1.5rem);
         }
 
         >ul {
-            @include flex(space-between, flex-start) {}
+            display: flex;
+            @include flex(center, center) {}
             padding: 0;
-            margin-left: 20%;
 
             .list {
                 width: 160px;
@@ -156,6 +158,7 @@ header.active {
     transition: .5s;
     transform: translateX(110%);
     z-index: 999;
+    
 }
 .burger.active {
     width: 100%;
@@ -164,6 +167,7 @@ header.active {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
     display: flex;
     flex-direction: column;
     gap: 100px;
@@ -174,6 +178,7 @@ header.active {
 .burger-ic {
     padding-top: 5px;
     display: none;
+    cursor: pointer;
 }
 .btn-login {
     color: #FFF;
@@ -191,6 +196,7 @@ header.active {
     >a {
         @include font(600, 25px);
         color: white;
+        cursor: pointer
     }
 }
 
