--- a/css/about.scss
+++ b/css/about.scss
@@ -302,8 +302,14 @@ body {
             font-size: 24px;
             font-weight: 400;
             line-height: 150%; 
+            // text-align: center;
             span {
                 font-weight: 700;
+            }
+        }
+        &:nth-child(2n -1) {
+            .desc {
+                text-align: right;
             }
         }
     }
@@ -720,10 +726,11 @@ body {
     }
 }
 .map {
-    margin-top: 396px;
+    margin-top: 0;
     width: 100%;
     height: 1180px;
-    background:  #111 url(../img/main/img_map.png) no-repeat 0 100% / 100%;
+    background:   url(../img/main/img_map.png) no-repeat center 100% / 100%;
+    padding: 0 244px;
 }
 .leaflet {
     display: grid;
