--- a/css/about.scss
+++ b/css/about.scss
@@ -731,6 +731,7 @@ body {
     height: 1180px;
     background:   url(../img/main/img_map.png) no-repeat center 100% / 100%;
     padding: 0 244px;
+    margin-top: 300px;
 }
 .leaflet {
     display: grid;
