--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -189,11 +189,9 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
-
 input[type="number"] {
   -moz-appearance: textfield;
 }
-
 input[type="number"],
 input[type="text"],
 input[type="password"],
@@ -207,23 +205,19 @@ textarea {
   appearance: none;
   border-radius: 0;
 }
-
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
-
 input[type="date"] {
   position: relative;
 }
-
 input[type="date"]::-webkit-clear-button,
 input[type="date"]::-webkit-inner-spin-button {
   display: none;
 }
-
 input[type="date"]::-webkit-calendar-picker-indicator {
   position: absolute;
   left: 0;
@@ -234,21 +228,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 100%;
   height: 100%;
 }
-
 input[type="date"] {
   position: relative;
   /* width: 100px; */
 }
-
 input[type="date"]::before {
   content: attr(data-placeholder);
   width: 100%;
 }
-
 input[type="date"]:valid::before {
   display: none;
 }
-
 caption,
 legend,
 .a11y-hidden {
@@ -282,8 +272,6 @@ legend,
     display: none;
   }
 }
-
-
 :root {
   --black: #000;
   --black0e: #0e111f;
@@ -958,7 +946,6 @@ html {
     color: var(--blue00);
     font-size: 2rem;
     font-weight: 800;
-    
   }
 }
 .table-type1 {
@@ -1083,12 +1070,10 @@ html {
   display: none;
   cursor: pointer;
 }
-
 .form-group label {
   position: relative;
   cursor: pointer;
 }
-
 .form-group label:before {
   width: 21px;
   height: 21px;
@@ -1103,9 +1088,7 @@ html {
   cursor: pointer;
   margin-right: 5px;
   border-radius: 2px;
-  
 }
-
 .form-group input:checked + label:after {
   content: '';
   position: absolute;
@@ -1119,8 +1102,6 @@ html {
   transform: rotate(45deg);
   margin-top: 10px;
 }
-
-
 .table-search {
   border: 0.1rem solid var(--grayeb);
   border-right: 0;
@@ -1144,7 +1125,6 @@ html {
     font-size: 1.6rem;
     font-weight: 700;
   }
-
 }
 .table-date {
   background-color: var(--white);
@@ -1316,7 +1296,7 @@ input:checked + .slider:before {
     font-size: 1.6rem;
     padding: 1.6rem;
     width: 100%;
-    background: url(../images/ico_arrow_down.svg) no-repeat right 1.3rem center / 0.9rem;
+    background: url(../images/ico_arrow_down.svg) no-repeat right 1.3rem center / 2.4rem;
     border: 1px solid var(--grayeb);
     border-radius: 10px;
     font-family: 'pretendard';
@@ -1337,7 +1317,6 @@ input:checked + .slider:before {
     font-size: 14px;
     border-radius: 10px;
     border: 1px solid #747474;
-    /* background:#FFF; */
     background: #fff url(../images/ico_arrow_down.svg) no-repeat right 0.8rem center / 2.4rem;
   }
 }
@@ -1943,7 +1922,7 @@ hr.border {
 .input-btn2 {
   display: grid;
   grid-template-columns: 1fr minmax(auto, auto);
-  gap: 1.4rem;
+  /* gap: 1.4rem; */
   align-items: center;
   &.ico-number {
     position: relative;
