--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -604,7 +604,7 @@ html {
     }
   }
   &.line {
-    border: 1px solid #747474;
+    border: 2px solid #747474;
     color: #747474;
     padding: 6px 16px;
     background: transparent;
@@ -614,6 +614,17 @@ html {
       background-color: var(--white);
       border: 2px solid #747474;
       color: #747474;
+    }
+    &.gray2 {
+      display: inline-block;
+      background: transparent;
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 1.8rem;
+      text-align: center;
+      border-radius: 10px;
+      border: 2px solid #747474;
+      color:#747474;
     }
     &.red {
       background-color: transparent;
@@ -749,7 +760,7 @@ html {
   width: 100%;
   text-align: center;
   padding: 1.4rem 2.0rem;
-  background: var(--blue00);
+  background: #F60035;
   color: var(--white);
   font-size: 1.4rem;
   font-weight: 700;
@@ -764,7 +775,6 @@ html {
   display: flex;
   min-height: calc(100vh - 6.9rem);
   background-color: var(--grayf8);
-  overflow-x: auto;
 }
 #aside {
   display: block;
@@ -772,7 +782,6 @@ html {
     width: 236px;
     background: var(--white);
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.12);
-    /* padding-top: 3.2rem; */
 }
 .sidebar {
   display: block;
@@ -830,27 +839,43 @@ html {
   &.ico1 {
     &::before {
       content: "";
-    width: 2.4rem;
-    height: 2.4rem;
-    background: url(../images/ico_member.svg) no-repeat center / contain;
+      width: 2.4rem;
+      height: 2.4rem;
+      background: url(../images/ico_member.svg) no-repeat center / contain;
     }
   }
   &.ico2 {
     &::before {
       content: "";
-    width: 2.4rem;
-    height: 2.4rem;
-    background: url(../images/ico_payment.svg) no-repeat center / contain;
+      width: 2.4rem;
+      height: 2.4rem;
+      background: url(../images/ico_payment.svg) no-repeat center / contain;
     }
   }
-  
 }
 .content {
   width: 100%;
-  min-width: 1440px;
+  /* min-width: 1440px; */
   padding: 3.6rem 5rem 4.8rem 5rem;
   box-sizing: border-box;
-  
+  &.login {
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  & .login {
+    max-width: 560px;
+    min-width: 560px;
+    border-radius: 10px;
+    background:#FFF;
+    box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.10);
+    padding: 90px 72px;
+    & .logo {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 .heading {
   color: var(--black0e);
