--- a/css/about.scss
+++ b/css/about.scss
@@ -549,7 +549,7 @@ body {
 }
 .input-wrap {
     width: 100%;
-    max-width: 440px;
+    max-width: 546px;
     margin: 0 auto;
     padding-top: 210px;
     padding-bottom: 384px;
@@ -654,6 +654,20 @@ body {
         color: #fff;
         font-size: 17px;
         font-weight: 700;
+    }
+    .text1 {
+        color: #464646;
+        font-size: 15px;
+        font-weight: 600;
+        line-height: 100%;
+    }
+    .text2 {
+        color: var(--gr-70, #5D5D5D);
+        font-family: Pretendard;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%; /* 14px */
     }
 }
 
@@ -821,6 +835,7 @@ body {
         font-weight: 600;
         line-height: 150%;
     }
+
 }
 .btn-main {
     position: fixed;
@@ -1056,6 +1071,108 @@ body {
         line-height: 150%;         
     }
 }
+
+// 라디오버튼 티셔츠사이즈
+.size-radio {
+    width: 100%;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 10px;
+    li {
+        display: flex;
+        align-items: center;
+        input[type="radio"] {
+            opacity: 0;
+            position: absolute;
+        }
+        label {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            // width: 70px;
+            width: 100%;
+            height: 50px;
+            background: white;
+            cursor: pointer;
+            transition: background 0.3s ease;
+            border: 1px solid #d1d1d1;
+            border-radius: 4px;
+            color:#171717;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 17px;
+        }
+        :checked {
+            + label {
+                color:#F60035;
+                border: 1px solid #F60035;                
+            }
+        }
+        + li {
+            padding-top: 0 !important;
+        }
+    }
+}
+
+.payment-radio {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.payment-radio li {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* 텍스트와 라디오 버튼 사이 간격 조정 */
+    position: relative; /* 내부 원 위치 조정 */
+    + li {
+        padding-top: 0 !important;
+    }
+}
+
+.payment-radio input[type="radio"] {
+    display: none; /* 라디오 버튼 숨기기 */
+}
+
+.payment-radio label {
+    display: flex;
+    align-items: center;
+    cursor: pointer; /* 커서 포인터 */
+    position: relative; /* 내부 원 위치 조정 */
+}
+
+.payment-radio label::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #d1d1d1;
+    margin-right: 8px; /* 원과 텍스트 사이 간격 */
+    box-sizing: border-box;
+    position: relative;
+}
+
+.payment-radio input[type="radio"]:checked + label::after {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: #F70035;
+    border-radius: 50%;
+    position: absolute;
+    top: 4.6px;
+    left: 4.6px;
+
+    // transform: translate(-50%, -50%);
+    pointer-events: none; /* 클릭 이벤트가 작은 원에 영향 미치지 않도록 함 */
+}
+
 
 
 
@@ -1461,9 +1578,21 @@ body {
 .list-info {
     li {
         display: grid;
-        grid-template-columns: min-content 1fr;
+        grid-template-columns: 120px 1fr;
+        align-items: center;
         gap: 16px;
     }
+    #counter {
+        display: inline-flex;
+        align-items: center;
+        padding: 6px 10px;
+        gap: 20px;
+        border: 1px solid #d1d1d1;
+        border-radius: 6px;
+        button {
+            background: transparent;
+        }
+    }    
     &__title {
         color:#464646;
         font-size: 15px;
@@ -1670,6 +1799,23 @@ body {
         }
     }
 }
+.select-input {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    select, input {
+        width: 100%;
+        height: 50px;
+        border-radius: var(--Shape-shape-extra-small, 4px);
+        border: 1px solid var(--gr-30, #D1D1D1);
+        padding: 16px;
+    }
+    select {
+    }
+    input {
+        
+    }
+}
 
 
 
@@ -1703,6 +1849,7 @@ body {
 .mb10 { margin-bottom: 10px; }
 .mb32 { margin-bottom: 32px; }
 .mb56 { margin-bottom: 56px; }
+.pt8 { padding-top: 8px; }
 .pt20 { padding-top: 20px; }
 .pt26 { padding-top: 26px; }
 .pt35 { padding-top: 35px; }
@@ -1749,6 +1896,8 @@ body {
 }
 .text-center { text-align: center; }
 .text-left { text-align: left; }
+
+
 
 @import "./m_about";
 
